--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,8 @@
-OPENAI_API_KEY=
+OPENAI_API_KEY=""
 
-LANGCHAIN_TRACING_V2=
-LANGCHAIN_API_KEY=
-LANGCHAIN_PROJECT=
+LANGSMITH_TRACING=true
+LANGSMITH_ENDPOINT=""
+LANGSMITH_API_KEY=""
+LANGSMITH_PROJECT="langchain-tutoriais"
 
-TAVILY_API_KEY=
+TAVILY_API_KEY=""
